-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.0
-
None
-
Android 10
-
-
0c8f3eb35eead6e4db7732020d7fb2863ba3787f (qt/qtconnectivity/5.14) e851596c284bfa3ef5be1bb982cf8a57360baed9 (qt/qtconnectivity/5.12)
When you try to discover devices using the QBluetoothDeviceDiscoveryAgent you immediately get QBluetoothDeviceDiscoveryAgent::InputOutputError, after spending some hours trying to figure out what is going on, I discovered that when I switch the target sdk to API 28 it works flawless.
To reproduce the error the next code snipped is enough:
QBluetoothDeviceDiscoveryAgent *discoveryAgent = new QBluetoothDeviceDiscoveryAgent;
connect(discoveryAgent , SIGNAL(deviceDiscovered(QBluetoothDeviceInfo)),
this, SLOT(deviceDiscovered(QBluetoothDeviceInfo)));
connect(discoveryAgent , SIGNAL(error(QBluetoothDeviceDiscoveryAgent::Error)),
this, SLOT(discoveryError(QBluetoothDeviceDiscoveryAgent::Error)));
discoveryAgent->start();
| For Gerrit Dashboard: QTBUG-81875 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 290326,5 | Add location-turned-on check before starting device discovery | 5.14 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
| 290327,3 | Ensure that a failing classic discovery doesn't prevent LE scan | 5.14 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
| 290328,3 | Grant ACCESS_FINE_LOCATION to QtBluetooth | 5.14 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
| 291999,2 | Grant ACCESS_FINE_LOCATION to QtBluetooth | 5.12 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
| 292000,2 | Add location-turned-on check before starting device discovery | 5.12 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
| 292001,2 | Ensure that a failing classic discovery doesn't prevent LE scan | 5.12 | qt/qtconnectivity | Status: MERGED | +2 | 0 |